--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
   <!-- Háttérvideó -->
   <video class="bg-video" autoplay muted loop>
-    <source src="your-video.mp4" type="video/mp4">
+    <source src="hattervideo.mp4" type="video/mp4">
     A böngésződ nem támogatja a videó lejátszást.
   </video>
 
