--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   <div class="overlay">
     <h1>Köszöntelek az oldalunkon,<br> nemsokára indulunk!</h1>
     <div class="social-icons">
-      <a href="#"><i class="fab fa-tiktok"></i></a>
+      <a href="https://www.tiktok.com/@istvantorma" target="_blank"><i class="fab fa-tiktok"></i></a>
       <a href="#"><i class="fab fa-instagram"></i></a>
       <a href="#"><i class="fab fa-facebook"></i></a>
     </div>
