--- a/index.html
+++ b/index.html
@@ -170,6 +170,23 @@
       <a href="motivacios-level.pdf" target="_blank">Motivációs levél</a>
     </div>
   </div>
+<!-- Tiktok dolgok -->
+<div class="tiktok-sor">
+  <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@user/video/123456" data-video-id="123456" style="max-width: 300px;">
+    <section><a href="https://www.tiktok.com/@user">@user</a></section>
+  </blockquote>
 
+  <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@user/video/654321" data-video-id="654321" style="max-width: 300px;">
+    <section><a href="https://www.tiktok.com/@user">@user</a></section>
+  </blockquote>
+
+  <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@user/video/789012" data-video-id="789012" style="max-width: 300px;">
+    <section><a href="https://www.tiktok.com/@user">@user</a></section>
+  </blockquote>
+</div>
+
+<script async src="https://www.tiktok.com/embed.js"></script>
+
+  
 </body>
 </html>
