--- a/index.html
+++ b/index.html
@@ -173,16 +173,16 @@
   </div>
 <!-- Tiktok dolgok -->
 <div class="tiktok-sor">
-  <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@user/video/123456" data-video-id="123456" style="max-width: 300px;">
-    <section><a href="https://www.tiktok.com/@user">@user</a></section>
+  <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@istvantorma/video/7281950037532265761" data-video-id="7281950037532265761"" style="max-width: 300px;">
+    <section><a href="https://www.tiktok.com/@user">@istvantorma</a></section>
   </blockquote>
 
-  <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@user/video/654321" data-video-id="654321" style="max-width: 300px;">
-    <section><a href="https://www.tiktok.com/@user">@user</a></section>
+  <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@istvantorma/video/7281950037532265761" data-video-id="7281950037532265761"" style="max-width: 300px;">
+    <section><a href="https://www.tiktok.com/@user">@istvantorma</a></section>
   </blockquote>
 
-  <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@user/video/789012" data-video-id="789012" style="max-width: 300px;">
-    <section><a href="https://www.tiktok.com/@user">@user</a></section>
+  <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@istvantorma/video/7281950037532265761" data-video-id="7281950037532265761"" style="max-width: 300px;">
+    <section><a href="https://www.tiktok.com/@user">@istvantorma</a></section>
   </blockquote>
 </div>
 
