--- a/index.html
+++ b/index.html
@@ -184,6 +184,14 @@
   <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@istvantorma/video/7281950037532265761" data-video-id="7281950037532265761"" style="max-width: 300px;">
     <section><a href="https://www.tiktok.com/@user">@istvantorma</a></section>
   </blockquote>
+  
+  <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@istvantorma/video/7281950037532265761" data-video-id="7281950037532265761"" style="max-width: 300px;">
+    <section><a href="https://www.tiktok.com/@user">@istvantorma</a></section>
+  </blockquote>
+  
+  <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@istvantorma/video/7281950037532265761" data-video-id="7281950037532265761"" style="max-width: 300px;">
+    <section><a href="https://www.tiktok.com/@user">@istvantorma</a></section>
+  </blockquote>
 </div>
 
 <script async src="https://www.tiktok.com/embed.js"></script>
