--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Torma Agrár</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="tiktok.css">
+   <link rel="stylesheet" href="oldalalja.css">
   <style>
     * {
       margin: 0;
@@ -196,6 +197,9 @@
 
 <script async src="https://www.tiktok.com/embed.js"></script>
 
+  <footer>
+    <p>A weboldalt tervezte: <strong>Torma István Zsolt</strong></p>
+  </footer>
   
 </body>
 </html>
