--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <link rel="stylesheet" href="tiktok.css">
    <link rel="stylesheet" href="oldalalja.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+  <meta property="og:title" content="Torma Agrár" />
+  <meta property="og:description" content="Torma Agrár és Torma István Zsolt weboldala." />
+  <meta property="og:image" content="https://torma-agrar.hu/borito.jpg" />
+  <meta property="og:url" content="https://torma-agrar.hu/" />
+  
   <style>
     * {
       margin: 0;
