--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <meta property="og:title" content="Torma Agrár" />
   <meta property="og:description" content="Torma Agrár és Torma István Zsolt weboldala." />
-  <meta property="og:image" content="https://torma-agrar.hu/borito.jpg" />
+  <meta property="og:image" content="https://torma-agrar.hu/borito.png" />
   <meta property="og:url" content="https://torma-agrar.hu/" />
   
   <style>
