--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <h1>Köszöntelek az oldalunkon,<br> nemsokára indulunk!</h1>
     <div class="social-icons">
       <a href="https://www.tiktok.com/@istvantorma" target="_blank"><i class="fab fa-tiktok"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.youtube.com/@torma-agrar" target="_blank"><i class="fab fa-youtube"></i></a>
       <a href="#"><i class="fab fa-facebook"></i></a>
     </div>
     <div class="email">torma.agrar@gmail.com</div>
